spec/error_while_with_do.expected
Parse error: spec/error_while_with_do.kex:7:4: Expected 'end' to close main block, got Eof
