spec/error_while_with_do.kex
# `while` doesn't take a `do` either.
main do
  var i = 0
  while i < 3 do
    i = i + 1
  end
end
